automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </nav>
 
     <!-- Replace this div with a main tag to wrap the 'main' content of the webpage-->
-    <div>
+    <main>
 
       <!-- Replace this div with a section tag to better describe this portion of content -->
       <div>
@@ -39,7 +39,7 @@
       </div>
 
       <!-- Replace this div with a second section tag to indicate this is a separate portion of content-->
-      <div>
+      </main>
 
         <!-- Wrap the nested video content below with figure tags -->
         <div>
