--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </section>
 
       <!-- Replace this div with a second section tag to indicate this is a separate portion of content-->
-      </main>
+      <section>
 
         <!-- Wrap the nested video content below with figure tags -->
         <div>
@@ -51,8 +51,8 @@
 
           <!-- Wrap this text in a figcaption tag so that it captions the video above-->
           <span>Exceptional Promotional Video - Source: archive.org</span>
-        </div>
-      </div>
+        </section>
+      </>
 
       <!-- Replace this div with a third section tag -->
       <div>
